# gotion

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build-client.yml  deploy.yml  logs.yml
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  main.tsx
client/: .env  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs
client/src-tauri/src/db/: cache.rs
deploy/: .env.example  README.md  docker-compose.nas.yml
docs/gotion-web/: README.md  metadata.json  package-lock.json  (+1 more)
server/: Cargo.toml  Dockerfile
server/migrations/: 001_initial.sql  002_categories_subtasks.sql  003_add_starred.sql  004_fix_category_icons.sql  005_notion_config.sql  006_notion_status.sql  007_users.sql  008_subscriptions.sql  009_password_resets.sql  init.sql
server/src/: email.rs  jwt.rs  main.rs
server/src/api/: admin.rs  attachments.rs  auth.rs  blocks.rs  categories.rs  images.rs  mod.rs  notion.rs  payment.rs  tasks.rs
server/src/db/: blocks.rs  categories.rs  mod.rs  password_resets.rs  subscriptions.rs  tasks.rs  users.rs
server/src/sync/: block_sync.rs  conflict.rs  mod.rs  notion_client.rs  notion_poller.rs  notion_push.rs
server/src/ws/: handler.rs  mod.rs
shared/: Cargo.toml
website/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+117 files in other folders)
